apps/endointelligence/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: endointelligence
  labels:
    app.kubernetes.io/name: endointelligence
spec:
  selector:
    app.kubernetes.io/name: endointelligence
  ports:
    - name: http
      port: 80
      targetPort: http
