apps/endointelligence/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endointelligence
  labels:
    app.kubernetes.io/name: endointelligence
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: endointelligence.ambu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: endointelligence
                port:
                  name: http
